# VBA-Invent-rio-florestal

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARQUITETURA.md  CATALOGO_MODELOS_BIOMETRICOS.md  CHANGELOG.md  FLUXO_OPERACIONAL.md  MODELOS_HIPSOMETRICOS.md  MODELOS_TAPER.md  MODELOS_VOLUMETRICOS.md  PREMISSAS_BIOMETRICAS.md  ROADMAP.md
inventario-florestal-core/: AGENTS.md  README.md  pyproject.toml  requirements.txt
inventario-florestal-core/config/: desbaste.yaml  parametros.yaml
inventario-florestal-core/docs/: ANALISE_DE_RISCO_E_MONTE_CARLO.md  ANALISE_ECONOMICA_AVANCADA.md  ANALISE_RISCO_MONTE_CARLO.md  APLICADOR_DESBASTE.md  ARVORE_INDIVIDUAL_E_VOXELIZACAO.md  AUDITORIA_DA_PROGNOSE_E_ESTABILIDADE_DINAMICA.md  AUDITORIA_REVERSA_DA_PLATAFORMA.md  AUDITORIA_TEMPORAL_E_REMEDICOES.md  BANCO_TEMPORAL_E_RECALIBRACAO.md  CALIBRACAO_LIMITES_BIOLOGICOS.md  CENARIOS_SINTETICOS_EXTREMOS.md  CHM_DTM_SEGMENTACAO.md  CHOLESKY_E_COVARIANCIA.md  COMPETICAO_E_DENSIDADE_RELATIVA.md  COMPETICAO_TEMPORAL_EXPLICITA.md  CRESCIMENTO_INDIVIDUAL.md  CRESCIMENTO_TEMPORAL_POS_DESBASTE.md  CRITERIOS_DE_VALIDACAO_CIENTIFICA.md  CULMINACAO_E_GATILHOS_DE_MANEJO.md  DATASETS_SINTETICOS_E_STRESS_TESTS.md  DESBASTE_MISTO.md  DESBASTE_POR_AREA_BASAL.md  DESBASTE_QUALIDADE_G_INDIVIDUAL.md  DESBASTE_SELETIVO_N_E_G_INDIVIDUAL.md  DIRETRIZES_MANEJO_DESBASTE_PINUS.md  DIRETRIZ_DE_CONGELAMENTO_DE_ESCOPO.md  DOMINANCIA_DINAMICA_E_ESTRATIFICACAO.md  ESTABILIZACAO_MATEMATICA_DA_PROGNOSE.md  ESTABILIZACAO_TEMPORAL_E_AMORTECIMENTO.md  ESTADO_ATUAL_MANEJO.md  (+58 more)
(+102 files in other folders)
