[project]
name = "inventario-florestal"
version = "0.1.0"
description = "Rotinas Python para inventário florestal, biometria, distribuição diamétrica, hipsometria e sortimento."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gonçalo Granemann Ribeiro" }
]
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
